# phyc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yaml  ubuntu-cmake.yml
libs/GLAD/: CMakeLists.txt
libs/GLAD/include/glad/: glad.h
libs/GLAD/src/: glad.c
src/: indexBuffer.c  indexBuffer.h  main.c  main.cpp  renderer.c  renderer.h  shaderBuffer.c  shaderBuffer.h  typedef.h  vertexBuffer.c  vertexBuffer.h
